# zet-asociatie

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES_SUMMARY.md  COMPLETION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  QUICKSTART.md  RBAC_IMPLEMENTATION.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  restore-members.ts  tailwind.config.js
.cursor/: mcp.json
app/: globals.css  layout.tsx
app/(app)/: layout.tsx  page.tsx
db/: schema.sql  supabase_schema_extract.txt
docs/: FRESH_INSTALL_CHECKLIST.md  TAURI_SQLITE_MIGRATION.md  WINDOWS_INSTALL.md
electron/: README-electron.md  debug-log.js  main.js  postgres-setup.js  preload.js
hooks/: use-role.ts
lib/: activities-export-import.ts  activities-store.tsx  activity-import-export.ts  advanced-analytics-engine.ts  analytics-engine.ts  audit-log-store.tsx  audit-logger.ts  auth-context.tsx  auth-utils.ts  constants.ts  crypto.ts  db-adapter.ts  db.ts  export-utils.ts  group-import-export.ts  import-utils.ts  member-groups-store.tsx  members-store.tsx  mock-data.ts  payments-store.tsx  quick-cashin-context.tsx  settings-store.tsx  um-units-store.tsx  utils.ts  whatsapp-groups-store.tsx
resources/: set up .html
scripts/: check-migrations.js  copy-standalone-static.js  electron-db-bootstrap.js  generate-env.js  migrate.js  tauri-build.js  verify-windows-env.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  queries.sql
src-tauri/src/: lib.rs  main.rs
types/: index.ts
(+126 files in other folders)
