[package]
name = "zet-asociatie"
version = "0.1.0"
description = "Zet Asociatie - standalone desktop app"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "zet_asociatie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
